kubernetes/projects/applications/apps/renovate/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: renovate
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: renovate
    field.cattle.io/projectId: p-applications
    kubernetes.io/metadata.name: renovate
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    field.cattle.io/projectId: local:p-applications
    helm.sh/resource-policy: keep
    meta.helm.sh/release-name: renovate
    meta.helm.sh/release-namespace: renovate
